// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Link /> render matches default link snapshot 1`] = `
<Linkstyles__StyledLink
  data-bold={false}
  data-inverse={false}
  data-spaced={false}
  onClick={[Function]}
  to="/"
/>
`;

exports[`<Link /> render matches inverse link snapshot 1`] = `
<Linkstyles__StyledLink
  data-bold={false}
  data-inverse={true}
  data-spaced={false}
  onClick={[Function]}
  to="/"
/>
`;
